templates/grafana-setup-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    speedtest.io.service: grafana-setup
  name: grafana-setup
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        speedtest.io.service: grafana-setup
    spec:
      containers:
        - env:
            - name: GF_PASSWORD
              value: hdeAga76VG6ga7plZ1
            - name: GF_USER
              value: sitespeedio
          image: sitespeedio/grafana-bootstrap:8.8.0
          name: grafana-setup
          resources: {}
      restartPolicy: Always
status: {}
