templates/graphite-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    speedtest.io.service: graphite
  name: graphite
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        speedtest.io.service: graphite
    spec:
      containers:
        - image: sitespeedio/graphite:1.1.5-3
          name: graphite
          ports:
            - containerPort: 2003
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /opt/graphite/conf/carbon.conf
              subPath: carbon.conf
              name: carbon-configmap
            - mountPath: /opt/graphite/storage/whisper
              name: whisper
      restartPolicy: Always
      volumes:
        - name: whisper
          persistentVolumeClaim:
            claimName: whisper
        - name: carbon-configmap
          configMap:
            name: carbon-configmap
            items:
              - key: carbon.conf
                path: carbon.conf
status: {}
