templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/ssl-redirect: "false"
  name: sitespeed
spec:
  rules:
    - host: sitespeed.internal.io
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000
            path: /
    - host: graphite.internal.io
      http:
        paths:
          - backend:
              serviceName: graphite
              servicePort: 8080
            path: /
